k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nav7-backend
  namespace: sk-team-07
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nav7-backend
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/actuator/prometheus'
      labels:
        app: nav7-backend
    spec:
      containers:
        - name: nav7-be
          image: amdp-registry.skala-ai.com/skala25a/sk-nav7-be:1.0.0-39-f530fee3d68c
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
