k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nav7-backend
  namespace: skala-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nav7-backend
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/actuator/prometheus'

      labels:
        app: nav7-backend
    spec:
      containers:
        - name: nav7
          image: amdp-registry.skala-ai.com/skala25a/sk036-nav7-be:1.0.0-xxx
          ports:
            - containerPort: 8080
