k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nav7-service
  namespace: sk-team-07
spec:
  type: ClusterIP
  selector:
    app: nav7-backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
