k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nav7-service
  namespace: skala-practice
spec:
  type: ClusterIP
  selector:
    app: nav7-backend
  ports:
    - port: 80
      targetPort: 8080
