k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nav7-ingress
  namespace: sk-team-07
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: public-nginx
  rules:
    - host: sk-nav7.skala25a.project.skala-ai.com
      http:
        paths:
          - path: /apis
            pathType: Prefix
            backend:
              service:
                name: nav7-ai-service
                port:
                  number: 8000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: nav7-be-service
                port:
                  number: 8080
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: nav7-be-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nav7-fe-service
                port:
                  number: 80
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: nav7-be-service
                port:
                  number: 8081
  tls:
    - hosts:
        - sk-nav7.skala25a.project.skala-ai.com
      secretName: sk-nav7-manual-tls-secret
